fised almost everything in the TPP app!

--- a/_static/shared_styles.css
+++ b/_static/shared_styles.css
@@ -3,7 +3,7 @@
     body {
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        height: 200vh;
         margin-top: 4vw;
         background-color: #f4f4f4;
         border:1px solid black;
@@ -15,6 +15,16 @@
         margin-top:1vw;
         left:calc(50% -10vw);
         /*gap: 1vw; PREVIOUS GAP WITH 30 ENDOWMENT !* Space between numbers scales with viewport width *!*/
+        gap: 0.2vw; /* Space between numbers scales with viewport width */
+        flex-wrap: wrap; /* Optional: allows wrapping if buttons exceed container width */
+        align-items: center; /* Ensures proper vertical alignment */
+    }
+
+    .number-row-comp {
+        justify-content: center;
+        display: flex;
+        margin-top:1vw;
+        /*gap: 1vw; !* Space between numbers scales with viewport width *!*/
         gap: 0.2vw; /* Space between numbers scales with viewport width */
         flex-wrap: wrap; /* Optional: allows wrapping if buttons exceed container width */
         align-items: center; /* Ensures proper vertical alignment */
@@ -39,6 +49,23 @@
     }
 
     .norm {
+        width: 6vw; /* Width scales with viewport width */
+        height: 5vw; /* Height scales with viewport width */
+        flex-direction: column;
+        text-align: center; /* Center-aligns the text */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 0.9vw; /* Font size scales with viewport width */
+        background-color: #e0e0e0;
+        border: 1.5px solid #000000;
+        border-radius: 10%; /* Slightly rounded corners */
+        cursor: pointer;
+        font-family: Arial, Helvetica, sans-serif;
+        transition: background-color 0.3s ease;
+    }
+
+    .neg-norm {
         width: 6vw; /* Width scales with viewport width */
         height: 5vw; /* Height scales with viewport width */
         flex-direction: column;
@@ -88,6 +115,26 @@
     }
 
     .norm.disabled {
+        background-color: #F3F3F3; /* Grey color for disabled buttons */
+        border: 2px solid #d3d3d3;
+        color:#d3d3d3;
+        cursor: not-allowed;
+        pointer-events: none; /* Disable interactions */
+    }
+
+    .neg-norm:hover {
+        background-color: #ffcc00; /* Change background color on hover */
+    }
+
+    .neg-norm:active {
+        background-color: #ffa500; /* Change background color on click */
+    }
+
+    .neg-norm.selected {
+             background-color: #ffa500; /* Permanent color when clicked */
+    }
+
+    .neg-norm.disabled {
         background-color: #F3F3F3; /* Grey color for disabled buttons */
         border: 2px solid #d3d3d3;
         color:#d3d3d3;
@@ -195,28 +242,36 @@
     /* positioning elements in the figure */
     .person-a {
         left: calc(50% - 136px);
-        top: 65px;
+        top: 63px;
         font-size:10px;
         position: absolute;
     }
 
     .person-b {
-        left: calc(50% + 80px);
-        top: 65px;
+        left: calc(50% + 81px);
+        top: 64px;
         font-size:10px;
         position: absolute;
     }
 
     .person-c {
         left: calc(50% - 20px);
-        top:190px;
+        top:191px;
         font-size:10px;
         position: absolute;
     }
 
-    .you {
+    .you-dictator {
         left:calc(50% - 126.5px);
         top: 36px;
+        font-size:16px;
+        color: red;
+        position: absolute;
+    }
+
+    .you-third-party {
+        left:calc(50% - 10px);
+        top: 165px;
         font-size:16px;
         color: red;
         position: absolute;
@@ -323,8 +378,65 @@
         transform: translateX(-50%);
     }
 
+    .coin_destroyed {
+        width: 20px; /* Coins take the full width of the stack container */
+        min-width:10px;
+        height: 8px; /* Coin height is proportional to the width */
+        border-radius: 50%;
+        background-color: rgba(255, 0, 0, 0.15); /* Semi-transparent red (0.5 is 50% transparency) */
+        position: absolute;
+        transform: translateX(-50%);
+    }
+
+    .coin_destroyed2PP {
+        width: 20px; /* Coins take the full width of the stack container */
+        min-width:10px;
+        height: 8px; /* Coin height is proportional to the width */
+        border-radius: 50%;
+        background-color: rgba(255, 0, 0, 0.15); /* Semi-transparent red (0.5 is 50% transparency) */
+        position: absolute;
+        transform: translateX(-50%);
+    }
+
     .coinown {
-        width: 1.8vw; /* Coins take the full width of the stack container */
+        width: 20px; /* Coins take the full width of the stack container */
+        min-width:10px;
+        height: 8px; /* Coin height is proportional to the width */
+        border-radius: 50%;
+        background: linear-gradient(145deg, #ffd700, #e6c200);
+        border: 0.1vw solid #FFFFFF; /* Border size scales with the coin size */
+        box-shadow: inset -3px -2px 5px rgba(0, 0, 0, 0.2);
+        position: absolute;
+        transform: translateX(-50%);
+    }
+
+    .coinown2PP {
+        width: 20px; /* Coins take the full width of the stack container */
+        min-width:10px;
+        height: 8px; /* Coin height is proportional to the width */
+        border-radius: 50%;
+        background: linear-gradient(145deg, #ffd700, #e6c200);
+        /*border: 0.1vw solid #FFFFFF; !* Border size scales with the coin size *!*/
+        border: 0.1vw solid darkred; /* Border size scales with the coin size */
+        box-shadow: inset -3px -2px 5px rgba(0, 0, 0, 0.2);
+        position: absolute;
+        transform: translateX(-50%);
+    }
+
+    .coinown3PR {
+        width: 20px; /* Coins take the full width of the stack container */
+        min-width:10px;
+        height: 8px; /* Coin height is proportional to the width */
+        border-radius: 50%;
+        background: linear-gradient(145deg, #ffd700, #e6c200);
+        border: 0.1vw solid #FFFFFF; /* Border size scales with the coin size */
+        box-shadow: inset -3px -2px 5px rgba(0, 0, 0, 0.2);
+        position: absolute;
+        transform: translateX(-50%);
+    }
+
+    .coinown3PC {
+        width: 20px; /* Coins take the full width of the stack container */
         min-width:10px;
         height: 8px; /* Coin height is proportional to the width */
         border-radius: 50%;
@@ -341,17 +453,17 @@
         color: #333; /* Adjust color as needed */
         position: absolute; /* Position relative to .container */
         left: calc(50% - 50px); /* Center horizontally before offsetting */
-        top: 23%; /* Move up; adjust value as needed */
+        top: 50%; /* Move up; adjust value as needed */
         text-align: center; /* Align text */
     }
 
     .coin-count-labelDDes {
-        font-size:1.4vw;
+        font-size:14px;
         color: rgba(255, 0, 0, 0.15); /* Adjust color as needed */
         position: absolute; /* Position relative to .figure-container */
-        left: 30%; /* Center horizontally */
+        left: calc(50% - 70px); /* Center horizontally */
         transform: translateX(-50%); /* Adjust for exact centering */
-        top: 0%; /* Move up; adjust value as needed */
+        top: 60%; /* Move up; adjust value as needed */
         text-align: center; /* Align text */
     }
 
@@ -364,8 +476,18 @@
         text-align: center; /* Align text */
     }
 
+    .coin-count-labelDDes2PP {
+        font-size:14px;
+        color: rgba(255, 0, 0, 0.15); /* Adjust color as needed */
+        position: absolute; /* Position relative to .container */
+        left: calc(50% - 43px); /* Center horizontally */
+        transform: translateX(-50%); /* Adjust for exact centering */
+        top: -15%; /* Move up; adjust value as needed */
+        text-align: center; /* Align text */
+    }
+
     .coin-count-labelTP {
-        font-size:1.4vw;
+        font-size:14px;
         color: darkred; /* Adjust color as needed */
         position: absolute; /* Position relative to .figure-container */
         left: 85%; /* Center horizontally */
@@ -375,12 +497,32 @@
     }
 
     .coin-count-labelTP2PP {
-        font-size:1.4vw;
+        font-size:14px;
         color: darkred; /* Adjust color as needed */
         position: absolute; /* Position relative to .figure-container */
         left: 73%; /* Center horizontally */
         transform: translateX(-50%); /* Adjust for exact centering */
         top: 8%; /* Move up; adjust value as needed */
+        text-align: center; /* Align text */
+    }
+
+    .coin-count-labelTP3PR {
+        font-size:14px;
+        color: #333; /* Adjust color as needed */
+        position: absolute; /* Position relative to .container */
+        left: -4%; /* Center horizontally */
+        transform: translateX(-50%); /* Adjust for exact centering */
+        top: 56%; /* Move up; adjust value as needed */
+        text-align: center; /* Align text */
+    }
+
+    .coin-count-labelTP3PC {
+        font-size:14px;
+        color: #333; /* Adjust color as needed */
+        position: absolute; /* Position relative to .container */
+        left: 111%; /* Center horizontally */
+        transform: translateX(-50%); /* Adjust for exact centering */
+        top: 56%; /* Move up; adjust value as needed */
         text-align: center; /* Align text */
     }
 
@@ -410,3 +552,77 @@
     .coinR:nth-child(3)  { top: 8px; }
     .coinR:nth-child(2)  { top: 11px; }
     .coinR:nth-child(1)  { top: 14px; }
+
+    .coinown:nth-child(10)  { top: 18.8vw; }
+    .coinown:nth-child(9)   { top: 19.1vw; }
+    .coinown:nth-child(8)   { top: 19.4vw; }
+    .coinown:nth-child(7)   { top: 19.7vw; }
+    .coinown:nth-child(6)   { top: 20.0vw; }
+    .coinown:nth-child(5)   { top: 20.3vw; }
+    .coinown:nth-child(4)   { top: 20.6vw; }
+    .coinown:nth-child(3)   { top: 20.9vw; }
+    .coinown:nth-child(2)   { top: 21.2vw; }
+    .coinown:nth-child(1)   { top: 21.5vw; }
+
+    .coinown2PP:nth-child(10)  { top: 0.6vw; }
+    .coinown2PP:nth-child(9)   { top: 0.9vw; }
+    .coinown2PP:nth-child(8)   { top: 1.2vw; }
+    .coinown2PP:nth-child(7)   { top: 1.5vw; }
+    .coinown2PP:nth-child(6)   { top: 1.8vw; }
+    .coinown2PP:nth-child(5)   { top: 2.1vw; }
+    .coinown2PP:nth-child(4)   { top: 2.4vw; }
+    .coinown2PP:nth-child(3)   { top: 2.7vw; }
+    .coinown2PP:nth-child(2)   { top: 3.0vw; }
+    .coinown2PP:nth-child(1)   { top: 3.3vw; }
+
+    .coinown3PR:nth-child(1)   { top: 111px; }
+    .coinown3PR:nth-child(2)   { top: 114px; }
+    .coinown3PR:nth-child(3)   { top: 117px; }
+    .coinown3PR:nth-child(4)   { top: 120px; }
+    .coinown3PR:nth-child(5)   { top: 123px; }
+    .coinown3PR:nth-child(6)   { top: 126px; }
+    .coinown3PR:nth-child(7)   { top: 129px; }
+    .coinown3PR:nth-child(8)   { top: 132px; }
+    .coinown3PR:nth-child(9)   { top: 135px; }
+    .coinown3PR:nth-child(10)  { top: 138px; }
+    .coinown3PR:nth-child(11)  { top: 141px; }
+    .coinown3PR:nth-child(12)  { top: 144px; }
+
+    .coinown3PC:nth-child(1)   { top: 111px; }
+    .coinown3PC:nth-child(2)   { top: 114px; }
+    .coinown3PC:nth-child(3)   { top: 117px; }
+    .coinown3PC:nth-child(4)   { top: 120px; }
+    .coinown3PC:nth-child(5)   { top: 123px; }
+    .coinown3PC:nth-child(6)   { top: 126px; }
+    .coinown3PC:nth-child(7)   { top: 129px; }
+    .coinown3PC:nth-child(8)   { top: 132px; }
+    .coinown3PC:nth-child(9)   { top: 135px; }
+    .coinown3PC:nth-child(10)  { top: 138px; }
+    .coinown3PC:nth-child(11)  { top: 141px; }
+    .coinown3PC:nth-child(12)  { top: 144px; }
+
+    .coin_destroyed:nth-child(12)  { top: 111px; }
+    .coin_destroyed:nth-child(11)  { top: 114px; }
+    .coin_destroyed:nth-child(10)  { top: 117px; }
+    .coin_destroyed:nth-child(9)   { top: 120px; }
+    .coin_destroyed:nth-child(8)   { top: 123px; }
+    .coin_destroyed:nth-child(7)   { top: 126px; }
+    .coin_destroyed:nth-child(6)   { top: 129px; }
+    .coin_destroyed:nth-child(5)   { top: 132px; }
+    .coin_destroyed:nth-child(4)   { top: 135px; }
+    .coin_destroyed:nth-child(3)   { top: 138px; }
+    .coin_destroyed:nth-child(2)   { top: 141px; }
+    .coin_destroyed:nth-child(1)   { top: 144px; }
+
+    .coin_destroyed2PP:nth-child(12)  { top: -39px; }
+    .coin_destroyed2PP:nth-child(11)  { top: -36px; }
+    .coin_destroyed2PP:nth-child(10)  { top: -33px; }
+    .coin_destroyed2PP:nth-child(9)   { top: -30px; }
+    .coin_destroyed2PP:nth-child(8)   { top: -27px; }
+    .coin_destroyed2PP:nth-child(7)   { top: -24px; }
+    .coin_destroyed2PP:nth-child(6)   { top: -21px; }
+    .coin_destroyed2PP:nth-child(5)   { top: -18px; }
+    .coin_destroyed2PP:nth-child(4)   { top: -15px; }
+    .coin_destroyed2PP:nth-child(3)   { top: -12px; }
+    .coin_destroyed2PP:nth-child(2)   { top: -9px; }
+    .coin_destroyed2PP:nth-child(1)   { top: -6px; }
