--- a/_static/shared_styles.css
+++ b/_static/shared_styles.css
@@ -29,6 +29,26 @@
         align-items: center; /* Ensures proper vertical alignment */
     }
 
+    .number-row-close {
+        justify-content: center;
+        display: flex;
+        margin-top:3vw;
+        /*gap: 1vw; PREVIOUS GAP WITH 30 ENDOWMENT !* Space between numbers scales with viewport width *!*/
+        gap: 0vw; /* Space between numbers scales with viewport width */
+        flex-wrap: wrap; /* Optional: allows wrapping if buttons exceed container width */
+        align-items: center; /* Ensures proper vertical alignment */
+    }
+
+    .number-row-static {
+        justify-content: center;
+        display: flex;
+        margin-top:-2vw;
+        /*gap: 1vw; PREVIOUS GAP WITH 30 ENDOWMENT !* Space between numbers scales with viewport width *!*/
+        gap: 0.5vw; /* Space between numbers scales with viewport width */
+        flex-wrap: wrap; /* Optional: allows wrapping if buttons exceed container width */
+        align-items: center; /* Ensures proper vertical alignment */
+    }
+
     .number {
         width: 30px; /* should not scale */
         height: 30px; /* should not scale */
@@ -76,6 +96,23 @@
         background-color: #e0e0e0;
         border: 1.5px solid #000000;
         border-radius: 10%;
+        cursor: pointer;
+        font-family: Arial, Helvetica, sans-serif;
+        transition: background-color 0.3s ease;
+    }
+
+    .recorded-norm {
+        width: 75px; /* Width scales with viewport width */
+        height: 55px; /* Height scales with viewport width */
+        flex-direction: column;
+        text-align: center; /* Center-aligns the text */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 11.5; /* Font size scales with viewport width */
+        background-color: #e0e0e0;
+        border: 1px solid #000000;
+        border-radius: 10%; /* Slightly rounded corners */
         cursor: pointer;
         font-family: Arial, Helvetica, sans-serif;
         transition: background-color 0.3s ease;
@@ -141,6 +178,137 @@
         pointer-events: none; /* Disable interactions */
     }
 
+    .recorded-norm.selected {
+             background-color: #ffa500; /* Permanent color when clicked */
+    }
+
+    /*  Comprehension questions*/
+    .comprehension-row {
+        display: flex;
+        flex-direction: column; /* Stack items vertically */
+        justify-content: center; /* Center the items */
+        margin-top: 0vw; /* Adjust the top margin */
+        gap: 0.5vw; /* Space between items */
+    }
+
+    .comprehension-row-close {
+        justify-content: center;
+        display: flex;
+        margin-top:3vw;
+        /*gap: 1vw; PREVIOUS GAP WITH 30 ENDOWMENT !* Space between numbers scales with viewport width *!*/
+        gap: 0vw; /* Space between numbers scales with viewport width */
+        flex-wrap: wrap; /* Optional: allows wrapping if buttons exceed container width */
+        align-items: center; /* Ensures proper vertical alignment */
+    }
+
+    .comprehension-row-static {
+        justify-content: center;
+        display: flex;
+        margin-top:-2vw;
+        /*gap: 1vw; PREVIOUS GAP WITH 30 ENDOWMENT !* Space between numbers scales with viewport width *!*/
+        gap: 0.5vw; /* Space between numbers scales with viewport width */
+        flex-wrap: wrap; /* Optional: allows wrapping if buttons exceed container width */
+        align-items: center; /* Ensures proper vertical alignment */
+    }
+
+    .comprehension-option {
+        flex-direction: column;
+        text-align: center; /* Center-aligns the text */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 12px; /* Font size scales with viewport width */
+        background-color: #e0e0e0;
+        padding: 1.5px;
+        border: 1.5px solid #000000;
+        border-radius: 6px; /* Slightly rounded corners */
+        cursor: pointer;
+        font-family: Arial, Helvetica, sans-serif;
+        transition: background-color 0.3s ease;
+    }
+
+    .comprehension-option:hover {
+        background-color: #ffcc00; /* Change background color on hover */
+    }
+
+    .comprehension-option:active {
+        background-color: #ffa500; /* Change background color on click */
+    }
+
+    .comprehension-option.selected {
+             background-color: #ffa500; /* Permanent color when clicked */
+    }
+
+    .comprehension-option.disabled {
+        background-color: #F3F3F3; /* Grey color for disabled buttons */
+        border: 1.5px solid #d3d3d3;
+        color:#d3d3d3;
+        cursor: not-allowed;
+        pointer-events: none; /* Disable interactions */
+    }
+
+    .comprehension-optionTF {
+        flex-direction: column;
+        text-align: center; /* Center-aligns the text */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 14px; /* Font size scales with viewport width */
+        background-color: #e0e0e0;
+        padding: 1.5px;
+        border: 1.5px solid #000000;
+        border-radius: 6px; /* Slightly rounded corners */
+        cursor: pointer;
+        font-family: Arial, Helvetica, sans-serif;
+        transition: background-color 0.3s ease;
+    }
+
+    .comprehension-optionTF:hover {
+        background-color: #ffcc00; /* Change background color on hover */
+    }
+
+    .comprehension-optionTF:active {
+        background-color: #ffa500; /* Change background color on click */
+    }
+
+    .comprehension-optionTF.selected {
+             background-color: #ffa500; /* Permanent color when clicked */
+    }
+
+    .comprehension-error-red {
+        color: #a94442; /* Bootstrap default error text color (dark red) */
+        background-color: #f2dede; /* Light red background */
+        border: 1px solid #ebccd1; /* Red border */
+        padding: 10px; /* Padding for spacing */
+        border-radius: 4px; /* Slightly rounded corners */
+        margin-bottom: 15px; /* Spacing below the error */
+        display: none; /* Initially hidden */
+        font-size: 14px;
+    }
+
+    .comprehension-error-green {
+        color: green; /* Bootstrap default error text color (dark red) */
+        background-color: lightgreen;
+        border: 1px solid #77dd77;
+        padding: 10px;
+        border-radius: 4px;
+        margin-bottom: 15px;
+        display: none; /* Initially hidden */
+        font-size: 14px;
+    }
+
+    .comprehension-error-greenTF {
+        color: green; /* Bootstrap default error text color (dark red) */
+        background-color: lightgreen;
+        border: 1px solid #77dd77;
+        padding: 10px;
+        border-radius: 4px;
+        margin-bottom: 15px;
+        display: none; /* Initially hidden */
+        font-size: 14px;
+    }
+
+    /* Blocks */
     .responsive-div {
       width: 90%; /* Default width */
       transform-origin: top left; /* Ensure scaling starts from top-left */
@@ -219,6 +387,11 @@
             height: 50px; /* Height scales with viewport width */
             font-size: 10px
         }
+        .recorded-norm {
+            width: 67px; /* Width scales with viewport width */
+            height: 50px; /* Height scales with viewport width */
+            font-size: 10px
+        }
     }
 
     @media (max-width: 550px) { /* adjustments for smartphones */
@@ -242,6 +415,11 @@
             font-size: 8.5px
         }
         .neg-norm {
+            width: 55px; /* Width scales with viewport width */
+            height: 45px; /* Height scales with viewport width */
+            font-size: 8.5px
+        }
+        .recorded-norm {
             width: 55px; /* Width scales with viewport width */
             height: 45px; /* Height scales with viewport width */
             font-size: 8.5px
