--- a/_static/shared_styles.css
+++ b/_static/shared_styles.css
@@ -14,7 +14,7 @@
         border:0px solid black;
     }
 
-    .block-header{
+    .block-subhead{
         font-size: 22px;
         margin-bottom: 24px;
         /* color: dimgrey; */
