--- a/_static/shared_styles.css
+++ b/_static/shared_styles.css
@@ -14,12 +14,12 @@
         border:0px solid black;
     }
 
-    h2.block-header {
-        font-size: 22px;
-        margin-bottom: 24px;
+    .block-header {
+        font-size: 22px !important;
+        margin-bottom: 24px !important;
         /* color: dimgrey; */
-        font-weight: normal;
-        text-decoration: underline;
+        font-weight: normal !important;
+        text-decoration: underline !important;
     }
 
     .number-row {
