--- a/_static/shared_styles.css
+++ b/_static/shared_styles.css
@@ -397,7 +397,7 @@
     .question {
         text-align: center;
         margin-top:20px;
-        font-size: 16px;
+        font-size: 15px;
         font-weight: bold;
     }
 
@@ -566,6 +566,9 @@
             width: 55px; /* Width scales with viewport width */
             height: 45px; /* Height scales with viewport width */
             font-size: 8.5px;
+        }
+        .question {
+            font-size: 12px;
         }
         .answer {
             width: 55px; /* should not scale */
