--- a/_static/shared_styles.css
+++ b/_static/shared_styles.css
@@ -405,6 +405,7 @@
         justify-content: center;
         display: flex;
         margin-top:1vw;
+        margin-bottom:25px;
         left:calc(50% - 10vw);
         /*gap: 1vw; PREVIOUS GAP WITH 30 ENDOWMENT !* Space between numbers scales with viewport width *!*/
         gap: 0.2vw; /* Space between numbers scales with viewport width */
